<resources>
    <string name="app_name">ProlificApp</string>
    <string name="book_tag">Tag:</string>
    <string name="book_checked_out">Last Checked Out:</string>
    <string name="book_checkout">Checkout</string>
    <string name="menu_main_add">Add</string>
    <string name="menu_main_delete_all">Delete all books</string>
    <string name="menu_main_sort_by">Sort by</string>
    <string name="menu_main_seed">Seed</string>
    <string name="main_activity_title">Books</string>
    <string name="detail_activity_title">Detail</string>
    <string name="add_book_activity_title">Add book</string>
    <string name="title_hint">Book Title</string>
    <string name="author_hint">Author</string>
    <string name="publisher_hint">Publisher</string>
    <string name="categories_hint">Categories</string>
    <string name="title_error">Title required</string>
    <string name="author_error">Author required</string>
    <string name="publisher_error">Publisher required</string>
    <string name="categories_error">Categories required</string>
    <string name="submit_button_text">Submit</string>
    <string name="menu_share">Share</string>
    <string name="menu_done">Done</string>
    <string name="main_context_delete">Delete</string>
    <string name="main_context_title">Action</string>
    <string name="checkout_success">Checkout success</string>
    <string name="checkout_failed">Checkout failed</string>
    <string name="add_book_success">Book added successfully</string>
    <string name="add_book_fail">Unable to add book</string>
    <string name="main_recycler_fail">Unable to connect</string>
    <string name="delete_all_success">All books deleted</string>
    <string name="delete_all_fail">Unable to delete books</string>
    <string name="delete_book_success">Book deleted</string>
    <string name="delete_book_failed">Unable to delete book</string>
    <string name="delete_all_title">Delete all books?</string>
    <string name="delete_all_confirm_alert">Delete</string>
    <string name="delete_all_cancel_alert">Cancel</string>
    <string name="dialog_sort_title">Sort</string>
    <string name="dialog_sort_by">Sort by:</string>
    <string name="dialog_title">Title</string>
    <string name="dialog_author">Author</string>
    <string name="dialog_order_by">Order by:</string>
    <string name="dialog_asc">Ascending</string>
    <string name="dialog_desc">Descending</string>
    <string name="dialog_sort_positive">Sort</string>
    <string name="seed_success">Seed success</string>
    <string name="seed_failed">Seeding failed</string>
</resources>
